stencils/jacobi-1d-imper/woven_code/.compile.err
warning: OpenMP support for version 51 in flang is still incomplete
error: Semantic errors in /root/polybench-metafor/stencils/jacobi-1d-imper/woven_code/jacobi-1d-imper.preproc.f90
/root/polybench-metafor/stencils/jacobi-1d-imper/woven_code/jacobi-1d-imper.preproc.f90:59:15: error: Canonical loop nest must be perfectly nested.
          !$omp tile sizes(32,32)
                ^^^^
